# Polymarket-Stop-Loss-Take-Profit-Manager

./: .gitignore  Cargo.toml  LICENSE  README.md  start_bot.sh
.github/: copilot-instructions.md
docs/: MOMENTUM_STRATEGY.md
models/: direction_model.txt  direction_model_calib.txt  direction_model_liq.txt  direction_model_liq_norm.txt  direction_model_norm.txt  intrawindow_model.txt  intrawindow_norm.txt  tick_model.txt  tick_model_norm.txt
scripts/: collect_training_data.py  train_models.py
