[package]
name = "polymarket-sl-tp"
version = "0.1.0"
edition = "2021"
description = "Polymarket Stop-Loss / Take-Profit Manager & ML-Enhanced Trading Bots"
authors = ["PolyConsensus"]
license = "MIT"

[[bin]]
name = "ml_bot_tui"
path = "src/bin/ml_bot_tui.rs"

[[bin]]
name = "sl_tp_bot"
path = "src/bin/sl_tp_bot.rs"

[[bin]]
name = "momentum_bot"
path = "src/bin/momentum_bot.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time handling
chrono = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# Decimal math (critical for financial calculations)
rust_decimal = "1.39"
rust_decimal_macros = "1.39"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Utilities
url = "2"
dotenvy = "0.15"
once_cell = "1.19"
memchr = "2.7"  # Zero-allocation byte searching for fast JSON parsing
uuid = "1"     # For API key parsing
hmac = "0.12"  # For raw HTTP HMAC signature
sha2 = "0.10"  # For raw HTTP HMAC signature
base64 = "0.22"  # For raw HTTP signature encoding

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Polymarket SDK (for live trading with proxy wallet support)
polymarket-client-sdk = "0.1.2"

# Alloy (Ethereum/signing)
alloy = "1.3"
alloy-signer-local = "1.3"

# ML model (candle for neural networks)
candle-core = "0.9"
candle-nn = "0.9"
safetensors = "0.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1      # Better optimization
panic = "abort"        # Smaller binary, faster
