[package]
name = "polymarket-sl-tp"
version = "0.1.0"
edition = "2021"
description = "Polymarket Stop-Loss / Take-Profit Position Manager"
authors = ["PolyConsensus"]
license = "MIT"

[[bin]]
name = "sl_tp_bot"
path = "src/bin/sl_tp_bot.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time handling
chrono = "0.4"

# Error handling
anyhow = "1"

# Decimal math (critical for financial calculations)
rust_decimal = "1.39"
rust_decimal_macros = "1.39"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Utilities
once_cell = "1.19"
dotenvy = "0.15"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Polymarket SDK (for live trading with proxy wallet support)
polymarket-client-sdk = "0.1.2"

# Alloy (Ethereum/signing)
alloy = "1.3"
alloy-signer-local = "1.3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
